# twitch_detection

./: .gitignore  .gitignore.swp  Pipfile  README.md  compare_medals.py  concat_files.txt  concatenated_files.txt  cookies.txt  detect.py  detect_and_write_boxes.py  detect_dk.py  detect_rgb_set.py  dk_detections.txt  download.py  download_single.py  download_twitch_streams.py  extract_dks.py  keyboard.md  main.py  main_back.py  main_back_timing.py  main_paddleocr.py  main_tesseract.py  notes.md  ocr_on_image.py  paddleocr_video.py  pyproject.toml  requirements.txt  select_roi.py  tesseract.py  tesseract_output.txt  watch_and_run.py  watchman.py
concat/: concat_files.txt
docs/: convolution_explanation.md  current.md  detection_algorithm.md  faq.md  findings.md  medal_behavior.md  paddle_and_tesseract.md  rgb_matching.md
models/: processor.py  twitch_stream.py
rust/: README.md  transcribe.py
test/: debug_pipeline.py  detect_hsv.py  detect_timestamps.py  download_upload_twitch_streams.py  paddleocr_image.py  process_single_video.py  write_filtered_frames.py
test_py/: detect_rgb.py  detect_rgb_video.py  filter_dk_times.py
test_whisper_timestamped/: README.md
twitch_detections/: cliptu.py  config.py  download.py  download_and_process.py  download_single.py  frame.py  happy_utils.py  log.txt  main.py  main_schedule.py  main_schedule_infinity.py  pipeline.py  pipeline_first_half.py  pipeline_pieces.py  pipeline_second_half.py  process.py  process_stream.py  reference_log.txt  schedule.py  schedule_events.py  stream_math.md  sub.py  subproc.py  subproc_group.py  (+2 more)
(+155 files in other folders)
