[tool.poetry]
name = "twitch-detections"
version = "0.1.0"
description = ""
authors = ["Adam Zakaria <adam.p.zakaria@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
yt-dlp = "^2025.6.25"
happy-utils = "^0.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
