[tool.poetry]
name = "twitch-detections"
version = "0.1.0"
description = ""
authors = ["Adam Zakaria <adam.p.zakaria@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
yt-dlp = "^2025.6.25"
happy-utils = "^0.1.2"
onnx = "^1.18.0"
onnxruntime = "^1.22.0"
torch = "^2.7.1"
torchvision = "^0.22.1"
schedule = "^1.2.2"
path = "^17.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
